# pytaiga-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_SDK.md  README.md  SECURITY.md  debug_integration.py  inspect.sh  install.sh  pyproject.toml  run.sh  run_integration_tests.sh  run_unit_tests.sh  verify_tools.py
.github/workflows/: ci.yml
src/: config.py  server.py  taiga_client.py  tools.py
tests/: README.md  conftest.py  test_integration.py  test_server.py  test_taiga_client.py  test_transport.py
tests/integration/: test_client_integration.py
tests/unit/: test_auth.py  test_client_core.py  test_epics.py  test_projects.py  test_server.py  test_user_stories.py
