[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-taiga-bridge"
version = "1.0.0"
description = "Taiga integration bridge for MCP"
requires-python = ">=3.10"
authors = [{ name = "Talha Orak", email = "talhaorak.git@gmail.com" }]
dependencies = [
    "mcp[cli]>=0.1.0",
    "python-dotenv>=0.15.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "pytaigaclient",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.3.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Run unit tests",
    "integration: Run integration tests",
    "slow: Mark tests as slow-running",
    "auth: Authentication tests",
    "core: Core functionality tests",
    "projects: Project-related tests",
    "epics: Epic-related tests",
    "user_stories: User story-related tests",
    "tasks: Task-related tests",
    "issues: Issue-related tests",
    "sprints: Sprint-related tests",
]
addopts = "-v"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
commit_message = "chore(release): v{version}"
build_command = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.uv.sources]
pytaigaclient = { git = "https://github.com/talhaorak/pyTaigaClient.git" }

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
]
